# Quant-Enthusiasts-Risk-Engine

./: .gitignore  Dockerfile  HOW_TO_BUILD_ETC.md  LICENSE  README.md  SETUP.md  run_tests.sh  start.sh  test_installed_module.py
.github/workflows/: ci.yml
Docs/: INSTALLATION.md  api_reference.md  contributing_guide.md  deployment_guide.md  development_guide.md  faq_guide.md  market_data_guide.md  quickstart_guide.md  troubleshooting_guide.md
cpp_engine/: CMakeLists.txt  CMakeLists_20251019.txt  build.sh
cpp_engine/apps/: CMakeLists.txt  main.cpp
cpp_engine/libraries/: CMakeLists.txt
cpp_engine/libraries/python_interface/: CMakeLists.txt
cpp_engine/libraries/python_interface/src/: pybind_wrapper.cpp
cpp_engine/libraries/qe_risk_engine/: CMakeLists.txt  qe_risk_engine
cpp_engine/libraries/qe_risk_engine/includes/: BinomialTree.h  BlackScholes.h  ImpliedVolatilitySurface.h  Instrument.h  JumpDiffusion.h  MarketData.h
cpp_engine/libraries/qe_risk_engine/src/: ImpliedVolatilitySurface.cpp  Instrument.cpp  MarketData.cpp
cpp_engine/src/: Instrument.cpp  Instrument.h  MarketData.cpp  MarketData.h  Portfolio.cpp  Portfolio.h  RiskEngine.cpp  RiskEngine.h  main.cpp
cpp_engine/src/utils/: BinomialTree.cpp  BinomialTree.h  BlackScholes.cpp  BlackScholes.h  JumpDiffusion.cpp  JumpDiffusion.h
cpp_engine/tests/: CMakeLists.txt  simple_test.h  test_binomial_tree.cpp  test_blackscholes.cpp  test_portfolio.cpp  test_risk_engine.cpp
cpp_engine/tests/includes/: simple_test.h
cpp_engine/tests/src/: test_blackscholes.cpp  test_portfolio.cpp  test_risk_engine.cpp
js_dashboard/: api.js  app.js  config.js  index.html  portfolio.js  risk.js  state.js  styles.css  ui.js
python_api/: .env.example  =0.2.28  YFINANCE_INTEGRATION.md  app.py  example_yfinance_usage.py  market_data_cache.db  market_data_fetcher.py  pybind_wrapper.cpp  requirements-dev.txt  requirements.txt  setup.py  test_market_data.py
python_api/quant_risk_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
